--- a/example/style.css
+++ b/example/style.css
@@ -27,6 +27,7 @@ a:hover {
 body {
   margin: 0;
   display: flex;
+  flex-direction: column;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
@@ -37,6 +38,14 @@ h1 {
   line-height: 1.1;
 }
 
+#map {
+  width: 1200px;
+  height: 1200px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+  overflow: hidden;
+}
 #app {
   max-width: 1280px;
   margin: 0 auto;
