feat(pill): fix events for group

--- a/src/style.css
+++ b/src/style.css
@@ -2,12 +2,12 @@
   padding: 10px;
   min-width: 10vw;
   max-width: 20vw;
-  min-height: 80px;
+/*   min-height: 80px; */
 }
 .baloon-title{
   font-size: 1.2em;
   line-height: 1.2;
-font-weight: 600;
+  font-weight: 600;
   margin-bottom: 1em;
 }
 .baloon-content{
