feat(pill): small fix options use

--- a/example/style.css
+++ b/example/style.css
@@ -39,8 +39,8 @@ h1 {
 }
 
 #map {
-  width: 1600px;
-  height: 1200px;
+  /* width: 1600px; 
+  height: 1200px;*/
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
