--- a/src/style.css
+++ b/src/style.css
@@ -2,16 +2,22 @@
   padding: 10px;
   min-width: 10vw;
   max-width: 20vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid rgb(200, 200, 200);
+  border-radius: 4px;
 /*   min-height: 80px; */
 }
 .baloon-title{
   font-size: 1.2em;
   line-height: 1.2;
   font-weight: 600;
-  margin-bottom: 1em;
+  
 }
 .baloon-content{
   font-size: 1.0em;
   line-height: 1.1;
+  margin-top: 1em;
   margin-bottom: 1em;
 }
