--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 .baloon{
   padding: 10px;
-  min-width: 10vw;
-  max-width: 20vw;
+  min-width: 20vw;
+  max-width: 25vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,4 +20,13 @@
   line-height: 1.1;
   margin-top: 1em;
   margin-bottom: 1em;
+}
+.box45{
+  background-color: #f00;
+  width: 25px;
+  height: 25px;
+  display: flex;  
+  align-items: center;
+  justify-content: center;
+  transform: translate(0, 22px) rotate(45deg);
 }
