--- a/example/style.css
+++ b/example/style.css
@@ -39,6 +39,41 @@ h1 {
   margin: 0;
 }
 
+
+.baloon{
+  padding: 10px;
+  min-width: 20vw;
+  max-width: 25vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid rgb(200, 200, 200);
+  border-radius: 4px;
+/*   min-height: 80px; */
+}
+.baloon-title{
+  font-size: 1.2em;
+  line-height: 1.2;
+  font-weight: 600;
+  
+}
+.baloon-content{
+  font-size: 1.0em;
+  line-height: 1.1;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+.box45{
+  background-color: #f00;
+  width: 25px;
+  height: 25px;
+  display: flex;  
+  align-items: center;
+  justify-content: center;
+  transform: translate(0, 22px) rotate(45deg);
+}
+
+
 #map {
   /* width: 1600px; 
   height: 1200px;*/
