--- a/example/style.css
+++ b/example/style.css
@@ -39,6 +39,11 @@ h1 {
   margin: 0;
 }
 
+.hidden{
+  display: none;
+}
+
+
 
 .baloon{
   padding: 10px;
@@ -49,7 +54,67 @@ h1 {
   align-items: center;
   border: 2px solid rgb(200, 200, 200);
   border-radius: 4px;
+  background-color: rgb(221, 233, 116);
+  
 /*   min-height: 80px; */
+}
+.baseballoon{
+  display:block; 
+  position:relative;
+}
+.balloon{
+  padding: 10px;
+  min-width: 15vw;
+  max-width: 35vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid rgb(200, 200, 200);
+  border-radius: 4px;
+  background-color: rgb(221, 233, 116);
+  position: absolute;
+    bottom: 0;
+/*   min-height: 80px; */
+}
+.ctballoon{
+  padding: 10px;
+  min-width: 15vw;
+  max-width: 25vw;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  
+  position: absolute;
+    top: 45px;
+    left: 20px;
+/*   min-height: 80px; */
+}
+.ctballoon__title{
+  width: 90%;
+  font-size: 1.2em;
+  line-height: 1.2;
+  font-weight: 600;
+  color: #f00; 
+}
+.ctballoon__description{
+  width: 90%;
+  font-size: 1.0em;
+  line-height: 1.0;
+  font-weight: 400;
+  color: #000; 
+}
+.balloon__title{
+  font-size: 1.2em;
+  line-height: 1.2;
+  font-weight: 600;
+  color: #f00; 
+}
+.balloon__description{
+  font-size: 1.0em;
+  line-height: 1.0;
+  font-weight: 400;
+  color: #000; 
+  text-align: center;
 }
 .baloon-title{
   font-size: 1.2em;
@@ -73,6 +138,12 @@ h1 {
   transform: translate(0, 22px) rotate(45deg);
 }
 
+.baseballoon_svg{
+  position: absolute;
+  width: 15vw;
+  top: 0;
+  left: 0;
+}
 
 #map {
   /* width: 1600px; 
