--- a/example/style.css
+++ b/example/style.css
@@ -34,7 +34,7 @@ body {
   min-height: 100vh;
   align-items: center;
   flex-wrap: wrap;
-
+  /* touch-action:  pan-x   pan-y; */
 }
 
 h1 {
@@ -167,6 +167,18 @@ h1 {
   margin: 0 auto;
   padding: 1rem;
   text-align: center;
+  touch-action:  auto;
+  
+  
+}
+
+.nonezoom {
+  width: 100%;
+  touch-action:  none;
+  
+}
+#map2 {
+  touch-action:  auto;
   
 }
 .second-map {
