--- a/example/style.css
+++ b/example/style.css
@@ -170,11 +170,29 @@ h1 {
   
   
 }
-
+.ul-li-button{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 .nonezoom {
   width: 100%;
   touch-action:  none;
   
+}
+.multy-map{
+  width: 70%;
+  height: 90vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  touch-action:  none;
 }
 #map2 {
   touch-action:  auto;
