--- a/example/style.css
+++ b/example/style.css
@@ -186,12 +186,12 @@ h1 {
 }
 .multy-map{
   width: 70%;
-  height: 90vh;
+  height: 80vh;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   touch-action:  none;
 }
 #map2 {
@@ -200,7 +200,7 @@ h1 {
 }
 .second-map {
   width: 100%;  
-  margin: 0 auto;  
+  margin: 10px auto;  
   text-align: center;  
 }
 .third-map {
