--- a/example/style.css
+++ b/example/style.css
@@ -49,7 +49,7 @@ h1 {
 
 
 .precode{
-  width: 100%;
+  width: 60%;
 }
 .baloon{
   padding: 10px;
@@ -368,6 +368,9 @@ button:focus-visible {
   .divide-block{
     width: 100%;
     height: 40px;
+  }
+  .precode{
+    width: 100%;
   }
   #map{
     width: 100%;
