--- a/example/style.css
+++ b/example/style.css
@@ -507,3 +507,10 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
+@media (prefers-color-scheme: dark) {
+.svgmap-title h1{
+  color: #888;
+}
+}
