feat(pill): small fix css and publish v0.1.2

--- a/example/style.css
+++ b/example/style.css
@@ -363,7 +363,7 @@ button:focus-visible {
 .button-group {
   display: block;
   visibility: visible;
-  height: 7vh;
+  height: 4.5em;
 }
 .ul__select{
   display: flex;
